2009-01-04  Darin Adler  <darin@apple.com>

Bug 23086: REGRESSION(r39540/r39541): Windows build fails due to ICU errors
        https://bugs.webkit.org/show_bug.cgi?id=23086

        * editing/TextIterator.cpp: Check UCONFIG_NO_COLLATION and don't compile
        in the new search path if it's 0.



git-svn-id: svn://svn.chromium.org/blink/trunk@39594 bbb929c8-8fbe-4397-9dbb-9b2b20218538