third_party/WebKit/WebCore/editing/TextIterator.cpp
@@ -70,7 +70,7 @@ public:
     size_t search(size_t& startOffset);
     bool atBreak() const;
 
-#if USE(ICU_UNICODE)
+#if USE(ICU_UNICODE) && !UCONFIG_NO_COLLATION
 
 private:
     String m_target;
@@ -1173,7 +1173,7 @@ const UChar* WordAwareIterator::characters() const
 
 // --------
 
-#if USE(ICU_UNICODE)
+#if USE(ICU_UNICODE) && !UCONFIG_NO_COLLATION
 
 static const size_t minimumSearchBufferSize = 8192;
 
